samples/_failures_safe/1761472010_bbce8f_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_ea6ee14f.c: In function ‘find_shortest_path’:
./samples/SAFE/__tmp_ea6ee14f.c:171:12: error: missing terminating " character
  171 |     printf("No path found between
      |            ^~~~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_ea6ee14f.c:171:5: error: expected expression at end of input
  171 |     printf("No path found between
      |     ^~~~~~
./samples/SAFE/__tmp_ea6ee14f.c:171:5: error: expected declaration or statement at end of input
